Update produtcs page mobile, share modal responsive, Update products mobile header

--- a/products-mobile.html
+++ b/products-mobile.html
@@ -237,124 +237,43 @@
                                           data-section-id="NAV_MOBILE"
                                         >
                                           <div class="nav-mobile">
-                                            <div class="_15xhfd45">
-                                              <div
-                                                class="page-shell-mobile__nav-wrapper"
-                                                role="presentation"
-                                              >
-                                                <a
-                                                  data-testid="back-button"
-                                                  href="/"
-                                                  class="page-shell-mobile__nav-btn"
-                                                  ><div
-                                                    class="page-shell-mobile__nav-icon-wrapper"
-                                                  >
-                                                    <div
-                                                      class="page-shell-mobile__nav-icon"
-                                                    >
-                                                      <svg
-                                                        viewBox="0 0 32 32"
-                                                        xmlns="http://www.w3.org/2000/svg"
-                                                        aria-label="Back"
-                                                        role="img"
+                                            <div class="_du78a1u">
+                                              <div class="_kv14gss" role="presentation"><a aria-label="Back" data-testid="back-button" href="/s/homes"
+                                                  class="_11ml4fm"><span class="_3hmsj">
+                                                    <div class="_1ran6xy">
+                                                      <div><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-label="Back" role="img"
+                                                          focusable="false"
+                                                          style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
+                                                          <g fill="none">
+                                                            <path
+                                                              d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932">
+                                                            </path>
+                                                          </g>
+                                                        </svg></div>
+                                                      <div class="_1s0b0yb"></div>
+                                                    </div>
+                                                  </span></a></div>
+                                              <div class="_1jdtwz4">
+                                                <div class="_1sstjj60"><button data-modal="#share-modal-mobile" aria-label="Share" type="button" class="_11ml4fm"><span class="_3hmsj"><svg
+                                                        viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                                         focusable="false"
-                                                        style="
-                                                          display: block;
-                                                          fill: none;
-                                                          height: 16px;
-                                                          width: 16px;
-                                                          stroke: currentcolor;
-                                                          stroke-width: 4;
-                                                          overflow: visible;
-                                                        "
-                                                      >
+                                                        style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                                         <g fill="none">
-                                                          <path
-                                                            d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"
-                                                          ></path>
+                                                          <path d="M27 18v9a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-9"></path>
+                                                          <path d="M16 3v23V3z"></path>
+                                                          <path d="M6 13l9.293-9.293a1 1 0 0 1 1.414 0L26 13"></path>
                                                         </g>
-                                                      </svg>
-                                                    </div>
-                                                    <div
-                                                      class="page-shell-mobile__nav-overlay"
-                                                    >
-                                                      <div>Homes • Airbnb</div>
-                                                    </div>
-                                                  </div></a
-                                                >
-                                              </div>
-                                              <div class="_1gen4cyn">
-                                                <div class="_c2acbp">
-                                                  <button
-                                                    aria-label="Share"
-                                                    type="button"
-                                                    class="btn-close"
-                                                    data-modal="#share-modal"
-                                                  >
-                                                    <span class="relative"
-                                                      ><svg
-                                                        viewBox="0 0 32 32"
-                                                        xmlns="http://www.w3.org/2000/svg"
-                                                        aria-hidden="true"
-                                                        role="presentation"
-                                                        focusable="false"
-                                                        style="
-                                                          display: block;
-                                                          fill: none;
-                                                          height: 16px;
-                                                          width: 16px;
-                                                          stroke: currentcolor;
-                                                          stroke-width: 2;
-                                                          overflow: visible;
-                                                        "
-                                                      >
-                                                        <g fill="none">
-                                                          <path
-                                                            d="M27 18v9a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-9"
-                                                          ></path>
-                                                          <path
-                                                            d="M16 3v23V3z"
-                                                          ></path>
-                                                          <path
-                                                            d="M6 13l9.293-9.293a1 1 0 0 1 1.414 0L26 13"
-                                                          ></path>
-                                                        </g></svg
-                                                    ></span>
-                                                  </button>
-                                                </div>
-                                                <div>
-                                                  <button
-                                                    aria-label="Add listing to a list"
-                                                    data-testid="pdp-save-button-unsaved"
-                                                    type="button"
-                                                    class="btn-close"
-                                                  >
-                                                    <span class="relative"
-                                                      ><svg
-                                                        viewBox="0 0 32 32"
-                                                        xmlns="http://www.w3.org/2000/svg"
-                                                        aria-hidden="true"
-                                                        role="presentation"
-                                                        focusable="false"
-                                                        style="
-                                                          display: block;
-                                                          fill: none;
-                                                          height: 16px;
-                                                          width: 16px;
-                                                          stroke: currentcolor;
-                                                          stroke-width: 2;
-                                                          overflow: visible;
-                                                        "
-                                                      >
+                                                      </svg></span></button></div>
+                                                <div><button aria-label="Remove listing from a list" data-testid="pdp-save-button-saved" type="button"
+                                                    class="_11ml4fm"><span class="_3hmsj"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                                        aria-hidden="true" role="presentation" focusable="false"
+                                                        style="display: block; fill: rgb(255, 56, 92); height: 16px; width: 16px; stroke: rgb(255, 56, 92); stroke-width: 4; overflow: visible;">
                                                         <path
-                                                          d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z"
-                                                        ></path></svg
-                                                    ></span>
-                                                  </button>
-                                                </div>
+                                                          d="m16 28c7-4.733 14-10 14-17 0-1.792-.683-3.583-2.05-4.95-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05l-2.051 2.051-2.05-2.051c-1.367-1.366-3.158-2.05-4.95-2.05-1.791 0-3.583.684-4.949 2.05-1.367 1.367-2.051 3.158-2.051 4.95 0 7 7 12.267 14 17z">
+                                                        </path>
+                                                      </svg></span></button></div>
                                               </div>
                                             </div>
-                                            <div></div>
                                           </div>
                                         </div>
                                       </div>
@@ -1953,7 +1872,7 @@
                                                     aria-label="Learn more"
                                                     type="button"
                                                     class="btn-link-condensed"
-                                                    data-modal="#aircover-modal"
+                                                    data-modal="#aircover-modal-mobile"
                                                   >
                                                     Learn more
                                                   </button>
@@ -2107,7 +2026,7 @@
                                                 <button
                                                   type="button"
                                                   class="b1k5q1b3 v18vkvko dir dir-ltr"
-                                                  data-modal="#space-show-more-modal"
+                                                  data-modal="#space-show-more-modal-mobile"
                                                 >
                                                   <span
                                                     class="c1d1a0n6 dir dir-ltr"
@@ -2838,7 +2757,7 @@
                                                   <button
                                                     type="button"
                                                     class="b65jmrv bgpdp7p v7aged4 dir dir-ltr w-full w-md-auto"
-                                                    data-modal="#amenities-modal"
+                                                    data-modal="#amenities-modal-mobile"
                                                   >
                                                     Show all 30 amenities
                                                   </button>
@@ -6285,6 +6204,7 @@
                                                               class="i3kf4cr dir dir-ltr"
                                                             >
                                                               <button
+                                                                data-modal="#reviews-modal-mobile"
                                                                 aria-label="Show all 134 reviews, Opens modal dialog"
                                                                 type="button"
                                                                 class="b1k5q1b3 v18vkvko dir dir-ltr"
@@ -6307,6 +6227,7 @@
                                                   class="stu4mdj dir dir-ltr"
                                                 >
                                                   <button
+                                                    data-modal="#reviews-modal-mobile"
                                                     data-testid="pdp-show-all-reviews-button"
                                                     aria-label="Show all 134 reviews, Opens modal dialog"
                                                     type="button"
@@ -6793,7 +6714,7 @@
                                                 <button
                                                   type="button"
                                                   class="link"
-                                                  data-modal="#house-rules-modal"
+                                                  data-modal="#house-rules-modal-mobile"
                                                 >
                                                   <section>
                                                     <div
@@ -7970,7 +7891,7 @@
                                           aria-label="Share"
                                           type="button"
                                           class="_oda838"
-                                          data-modal="#share-modal"
+                                          data-modal="#share-modal-mobile"
                                         >
                                           <span class="relative"
                                             ><svg
@@ -12186,7 +12107,7 @@
                           aria-label="Share"
                           type="button"
                           class="_4ijurz"
-                          data-modal="#share-modal"
+                          data-modal="#share-modal-mobile"
                         >
                           <span class="relative"
                             ><svg
@@ -12835,7 +12756,7 @@
     </div>
 
     <!-- share modal-->
-    <div id="share-modal" class="hidden" dir="ltr">
+    <div id="share-modal-mobile" class="hidden" dir="ltr">
       <div class="modal__backdrop"></div>
       <section>
         <div class="modal__container" data-testid="modal-container">
@@ -13245,9 +13166,9 @@
     </div>
 
     <!-- reviews modal -->
-    <div id="reviews-modal" class="hidden" dir="ltr">
+    <div id="reviews-modal-mobile" class="hidden" dir="ltr">
       <section>
-        <div class="modal__container" data-testid="modal-container">
+        <div class="_j292vx" data-testid="modal-container">
           <div class="contents">
             <div
               class="container__border-0"
@@ -13262,7 +13183,7 @@
                 style="position: relative"
               >
                 <div class="_pa35zs">
-                  <button aria-label="Close" type="button" class="_oda838">
+                  <button data-button="close" aria-label="Close" type="button" class="_oda838">
                     <span class="_e296pg"
                       ><svg
                         viewBox="0 0 32 32"
@@ -14244,7 +14165,7 @@
     </div>
 
     <!-- aircover modal -->
-    <div id="aircover-modal" class="hidden" dir="ltr">
+    <div id="aircover-modal-mobile" class="hidden" dir="ltr">
       <div class="modal__backdrop"></div>
       <section>
         <div class="modal__container" data-testid="modal-container">
@@ -14432,7 +14353,7 @@
     </div>
 
     <!-- space show more modal -->
-    <div id="space-show-more-modal" class="hidden" dir="ltr">
+    <div id="space-show-more-modal-mobile" class="hidden" dir="ltr">
       <div class="modal__backdrop"></div>
       <section>
         <div
@@ -14649,7 +14570,7 @@
     </div>
 
     <!-- amenities modal -->
-    <div id="amenities-modal" class="hidden" dir="ltr">
+    <div id="amenities-modal-mobile" class="hidden" dir="ltr">
       <div class="modal__backdrop"></div>
       <section>
         <div
@@ -16287,7 +16208,7 @@
     </div>
 
     <!-- house rules modal -->
-    <div id="house-rules-modal" class="hidden" dir="ltr">
+    <div id="house-rules-modal-mobile" class="hidden" dir="ltr">
       <div class="modal__backdrop"></div>
       <section>
         <div
@@ -16540,6 +16461,7 @@
         <div aria-live="assertive" aria-atomic="true"></div>
       </div>
     </div>
+
     <script src="assets/js/components.js"></script>
     <script src="assets/js/pages/products.js" defer></script>
   </body>
